<resources>

    <string name="app_name">Demo Sprint 1</string>
    <string name="menu_settings">Settings</string>
    <string name="activity_http_title">HTTP Activity</string>
    
    <string name="text_host_hint">Host Address</string>
    <string name="text_host_default">130.238.15.222</string>

    <string name="text_message_hint">Message</string>
	<string name="text_message_default">\?echo=reverse_this_string</string>
    
    <string name="text_port_hint">Port</string>
    <string name="text_port_default">1055</string>
    
    <string name="button_get">GET</string>
    
    <string name="button_clear">Clear Log</string>

</resources>