<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/textHost"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_host_hint"
            android:text="@string/text_host_default" >

		</EditText>

    	<EditText
    	    android:id="@+id/textPort"
    	    android:layout_width="70dp"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:hint="@string/text_port_hint"
    	    android:inputType="number"
    	    android:text="@string/text_port_default" >

    	</EditText>
    	
    	<Button
    	    android:id="@+id/buttonGet"
    	    android:layout_width="70dp"
    	    android:layout_height="wrap_content"
    	    android:onClick="onClick"
    	    android:text="@string/button_get" />
        
    </LinearLayout>

    <EditText
        android:id="@+id/textMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/text_message_hint"
        android:text="@string/text_message_default" >

	</EditText>
    
    <EditText
        android:id="@+id/textLog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="left|top"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="onClick"
        android:text="@string/button_clear" />

</LinearLayout>
